# Python-Data-Science

py-00-Starting/ex00/: Hello.py
py-00-Starting/ex01/: format_ft_time.py
py-00-Starting/ex02/: find_ft_type.py
py-00-Starting/ex03/: NULL_not_found.py
py-00-Starting/ex04/: whatis.py
py-00-Starting/ex05/: building.py
py-00-Starting/ex06/: filterstring.py  ft_filter.py
py-00-Starting/ex07/: sos.py
py-00-Starting/ex08/: Loading.py
py-00-Starting/ex09/: LICENSE  README.md  pyproject.toml  setup.py
py-00-Starting/ex09/ft_package/: __init__.py
py-01-Array/ex00/: give_bmi.py
py-01-Array/ex01/: array2D.py
py-01-Array/ex03/: zoom.py
py-01-Array/ex04/: load_image.py  rotate.py
py-01-Array/ex05/: load_image.py  pimp_image.py  tester.py
py-02-DataTable/ex00/: load_csv.py
py-02-DataTable/ex01/: aff_life.py
py-02-DataTable/ex02/: aff_pop.py
py-02-DataTable/ex03/: projection_life.py
py-03-OOP/ex01/: S1E7.py
py-03-OOP/ex02/: DiamondTrap.py  S1E7.py
py-03-OOP/ex03/: ft_calculator.py  tester.py
py-03-OOP/ex04/: ft_calculator.py
py-04-DOD/ex00/: statistics.py
py-04-DOD/ex01/: in_out.py
py-04-DOD/ex02/: callLimit.py
py-04-DOD/ex03/: new_student.py
