[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
    { name = "abelhadj", email = "abelhadj@student.42.fr" }
]
description = "A sample test package"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
[project.urls]
Homepage = "https://github.com/abelhadj/ft_package"
